KSENROLL-3583 Code Cleanup - fix issues identified by findbugs in enrollment ui java code - serialization, null check, string manipulation...
git-svn-id: https://svn.kuali.org/repos/student/enrollment/ks-enroll/trunk@39261 0ac02d80-fb3f-11dc-a574-c57244a850eb